telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestCallProtConstructorClass.java
package tests;

class A {

	public A(String s) {
		A a = new A();
	}
	
	protected A(){};
	
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}


	void x(int y){
	}

	abstract void m2();
}

public strictfp abstract class C extends A {
	
	A m = new A();
	
	public C() {
		// TODO Auto-generated constructor stub
	}

	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}
	
	public void m(int x){
		
	}

	void x(int y){
	}

	abstract void m2();
}
